GPT API test integreation with init json data structure and promts. Test front-end updates to integrate API.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+textarea {
+  width: 100%;
+  height: 100px;
+  margin: 10px 0;
+}
+
+button {
+  display: block;
+  margin: 10px 0;
+}
+
+
