--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -5,6 +5,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
+  /* restrict user selection */
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 #root{
