--- a/frontend/src/components/Skills/SkillsPopup.css
+++ b/frontend/src/components/Skills/SkillsPopup.css
@@ -5,7 +5,7 @@
   text-align: center;
   margin-bottom: 15px;
   margin-top: 15px;
-  font-family: "Cinzel", serif;
+  font-family: "Cinzel Decorative", serif;
 }
 
 .skills-title::after {
