--- a/frontend/src/components/Sound/SoundPlayer.css
+++ b/frontend/src/components/Sound/SoundPlayer.css
@@ -1,4 +1,4 @@
-.toggle-button {
+.sound-toggle-button {
   position: fixed;
   bottom: 20px;
   left: 0;
@@ -12,7 +12,7 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.toggle-button:hover {
+.sound-toggle-button:hover {
   background-color: #0056b3;
 }
 
@@ -36,7 +36,7 @@
 }
 
 .player-container.hidden {
-  left: -100%;
+  left: -200vw;
   /* Slide out */
 }
 
