--- a/frontend/src/components/Steps/StepButtons.css
+++ b/frontend/src/components/Steps/StepButtons.css
@@ -11,6 +11,14 @@
     box-sizing: border-box;
 }
 
+.steps-header{
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+}
+
 /* Title */
 .steps-title {
     font-size: 2rem;
@@ -24,7 +32,7 @@
 .steps-title::after {
     content: "";
     display: block;
-    width: 40%;
+    width: 100%;
     height: 3px;
     background: linear-gradient(to right, #d4c0a1, transparent);
     margin: 10px auto 0;
